# edi-ediversa

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
edi_ediversa_oca/: README.rst  __manifest__.py
edi_ediversa_oca/components/: ediversa_api.py
edi_ediversa_oca/i18n/: it.po
edi_ediversa_oca/static/description/: index.html
edi_ediversa_oca_invoice_send/: README.rst  __manifest__.py
edi_ediversa_oca_invoice_send/i18n/: it.po
edi_ediversa_oca_invoice_send/models/: account_move.py
edi_ediversa_oca_invoice_send/static/description/: index.html
edi_ediversa_oca_sale_order_import/: README.rst  __manifest__.py
edi_ediversa_oca_sale_order_import/components/: ediversa_api.py
edi_ediversa_oca_sale_order_import/i18n/: it.po
edi_ediversa_oca_sale_order_import/static/description/: index.html
setup/_metapackage/: pyproject.toml
